--- a/index.html
+++ b/index.html
@@ -49,46 +49,44 @@
       An SH2-compatible (Renesas SuperH) disassembler.
     </div>
 
-    <p>sh2dis is a very rudimentary automated disassembly tool for SH2 processors written in Python. The internal representation and produced output are inspired somewhat by IDA Pro, a general-purpose multi-platform code analysis tool.
+    <p>sh2dis is a very rudimentary automated disassembly tool for SH2 processors written in Python. The internal representation and produced output are inspired somewhat by IDA Pro, a general-purpose multi-platform code analysis tool.</p>
 
-It can currently do relatively broad automated disassembly by tracking register assignments loosely and following branches where it can reasonably discern a destination. It doesn't catch everything yet, and likely never will; the end goal is not a full-on SH2 simulator.
+<p>It can currently do relatively broad automated disassembly by tracking register assignments loosely and following branches where it can reasonably discern a destination. It doesn't catch everything yet, and likely never will; the end goal is not a full-on SH2 simulator.</p>
 
+<p>This software is in the very early stages of development, and likely
+contains bugs. If you find one, please let me know at esm@logic.net.</p>
 
-This software is in the very early stages of development, and likely
-contains bugs. If you find one, please let me know at esm@logic.net.
+<p>Thanks for looking!</p>
 
-Thanks for looking!
+<p>-Ed</p>
 
--Ed</p><h2>Dependencies</h2>
+<h2>Dependencies</h2>
 <p>Python</p>
+
 <h2>Install</h2>
-<p>Visit https://github.com/logic/sh2dis, and click on the "Download" button to download either a zip or tar.gz of the current state of the repository. Extract this anywhere, and run "dis.py" with your installed python interpreter.
+<p>Click the links at the top of the page, or see the download section below, to grab the current state of the repository. Extract this anywhere, and run "dis.py" with your installed python interpreter.</p>
 
-The example command line tool, "dis.py", is capable of distinguishing between SH7052 and SH7055 ROM formats, and will perform an automated disassembly around the vector interupt table, labelling any known vectors and registers. This example application may not work well with applications other than ROMs
-taken from a Mitsubishi Lancer Evolution ECU, as that is the only platform I have direct access to.</p>
+<p>The example command line tool, "dis.py", is capable of distinguishing between SH7052 and SH7055 ROM formats, and will perform an automated disassembly around the vector interupt table, labelling any known vectors and registers. This example application may not work well with applications other than ROMs taken from a Mitsubishi Lancer Evolution ECU, as that is the only platform I have direct access to.</p>
 <h2>License</h2>
-<p>sh2dis, an SH2-compatible (Renesas SuperH) disassembler.
-Copyright (C) 2009, Edward S. Marshall
+<p>sh2dis, an SH2-compatible (Renesas SuperH) disassembler.<br/>
+Copyright (C) 2009, Edward S. Marshall</p>
 
-This program is free software: you can redistribute it and/or modify
+<p>This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
+(at your option) any later version.</p>
 
-This program is distributed in the hope that it will be useful,
+<p>This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
+GNU General Public License for more details.</p>
 
-You should have received a copy of the GNU General Public License
+<p>You should have received a copy of the GNU General Public License
 along with this program, in the file "COPYING3".  If not, see
-<http://www.gnu.org/licenses/>.
-</p>
-<h2>Authors</h2>
-<p>Ed Marshall (esm@logic.net)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Ed Marshall (esm@logic.net)<br/>      </p>
+<a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.</p>
 
+<h2>Authors</h2>
+<p>Ed Marshall (esm@logic.net)<br/><br/>      </p>
 
     <h2>Download</h2>
     <p>
