Agh, the blue, it burns.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #130ddd;
+      background-color: #101010;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #ffffff;
     }
